syntax = "proto3";
package todo_auth;

option go_package = "microservices/auth-service;auth_service";

message Token {
    string token = 1;
}

message UserProfile {
    string username = 1;
    string name = 2;
}

message UserCredentials {
    string username = 1;
    string password = 2;
}

message UserRegistrationForm {
    string username = 1;
    string name = 2;
    string password = 3;
}

service AuthService {
    rpc AuthenticateUser(Token) returns (UserProfile) {}
    rpc RegisterUser(UserRegistrationForm) returns (Token) {}
    rpc LoginUser(UserCredentials) returns (Token) {}
}
